--- a/it4women/exercises/hero-blocks-two.html
+++ b/it4women/exercises/hero-blocks-two.html
@@ -77,13 +77,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<li>Add different background images for desktop/laptop and mobile screens.</li>
 	</ul>
 
-
-
 	<p>You can view a finished version of the sample web page you will update in this Tutorial by clicking the link below. The finished sample will open in a new tab of your web browser.</p>
 
 	<div class="four-samples">
 		<div>
-			<a href="final-hero/hero-images/after/hero-images.html" target="_blank"><img src="assets/img/hero-blocks/example-two-browser.png" alt="Sample image"></a>
+			<a href="final-hero/hero-images/after/hero-images.html" target="_blank"><img src="assets/img/hero-blocks/example-two-browser.jpg" alt="Sample image"></a>
 			<a href="final-hero/hero-images/after/hero-images.html" class="link-exercise"  target="_blank">hero-bg-image.html</a>
 		</div>
 	</div>
@@ -94,24 +92,29 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <section class="wrapper-content">
 	<div class="box-toc">
 		<h2>Contents</h2>
-		<p><a href="#hero-about">About hero block images</a></p>
+		<p><a href="#hero-about">About hero blocks with background image</a></p>
 		<p><a href="#sample-files">Working with your sample files</a></p>
 		<p><a href="#hero-one">Hero block: sample six</a></p>
 		<p><a href="#hero-two">Hero block: sample seven</a></p>
 		<p><a href="#hero-three">Hero block: sample eight</a></p>
 		<p><a href="#hero-four">Hero block: sample nine</a></p>
 		<p><a href="#upload-github">Uploading your files to GitHub</a></p>
+		<p><a href="#further-resources">Further resources</a></p>
 	</div>
 </section>
 
 
 <section id="hero-about" class="wrapper-content bg-white">
 
-	<h2>About hero block images</h2>
+	<h2>About hero blocks with background images</h2>
 
-	<p>So-called <i>hero blocks</i> (sometimes known as <i>jumbotrons</i>) are large and typically rectangular areas at the very top of a web page.</p>
+	<p>The most common design approach to hero blocks on web pages is to use a full-width background image. Typically, the text in front of the background image is centre-aligned. See the examples below.</p>
 	
-	<p>They are the first item seen by users, and are intended to capture their attention and engage their interest in the web page.</p>
+	<img src="assets/img/hero-blocks/samples-hero-blocks-images-centre.jpg" alt="Working with Internal Hyperlinks">
+	<p>You will also see examples where the text is left-aligned.</p>
+	<img src="assets/img/hero-blocks/samples-hero-blocks-images-left.jpg" alt="Working with Internal Hyperlinks">
+
+	<p>In this Tutorial, you will work with four examples of hero blocks with background images.</p>
 
 </section>
 
@@ -396,12 +399,79 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 	</ol>
 
-	<p>Click <a href="final-hero/hero-images/after/hero-images.html" target="_blank">hero-images.html</a> to view a finished sample of this web page in a new tab of your web browser.</p>
 
-<p>&nbsp;</p>
-	<p><br><br>Return to <a href="../index.html">Contents</a>.</p>
+	<p>Success!. You have now completed this Tutorial.</p>
+
+	<p>You can see an example of the finished web page at the link below.</p>
+
+	<a href="final-hero/hero-images/after/hero-images.html" target="_blank">hero-images.html</a>
+
+
+
+
 </section>
 
+<section id="github-upload" class="wrapper-content bg-white">
+	<h2>Uploading your Bootstrap folder to GitHub</h2>
+
+	<p>Follow these steps below to upload your <i>entire</i> Bootstrap folder to your website on GitHub.</p>
+
+	<ol>
+
+		<li>Open a new tab in your web browser and go to <a href="https://www.github.com" target="_blank">GitHub.com</a>. If you are not already signed in to your GitHub account, sign in now.
+		<img src="assets/img/intro-bootstrap/github-signin.png" alt="github-signin"></li>
+
+		<li>On your GitHub home page, click the name of the repository (&#8216;repo&#8217;) that holds your web pages. Its name will look as follows, where <b>username</b> is your chosen username on GitHub.
+		<span class="inside-ol">&nbsp;</span>
+		<b>username.github.io</b>
+
+		<img src="assets/img/intro-bootstrap/github-repo-select.png" alt="github-signin"></li>
+
+		<li>On the next GitHub screen displayed, click the Add file button near the right of the screen and choose <b>Upload files</b> from the dropdown list. 
+		<img src="assets/img/intro-bootstrap/github-btn-add-file-dropdown.png" alt="github-upload-portfolio"></li>
+
+		<li>In File/Windows Explorer, select your <b>bootstrap</b> folder, and drag-and-drop it to your repository on GitHub. 
+		
+		<img src="assets/img/intro-bootstrap/github-upload-drag-drop.png" alt="Introduction to Images"></li>
+
+		<li>Scroll down to the bottom of the GitHub screen, and accept or edit the short message (<span style="color:gray">Add files via upload</span>) in the <b>Commit changes</b> box.
+
+		<span class="inside-ol">&nbsp;</span>
+
+		Finally, click the green <b>Commit changes</b> button to upload your entire <b>bootstrap</b> folder and all the files it contains.</li>
+
+	</ol>
+
+	<p>Your uploaded web page is published on GitHub at a web address similar to the following, where <b>username</b> is the username you have chosen for your GitHub account:</p>
+
+	<p><b>https://username.github.io/bootstrap/hero-images.html</b></p>
+
+	<p>It may take a few minutes for your uploaded files to appear on GitHub.</p>
+</section>
+
+
+	<section id="further-resources" class="wrapper-content">
+
+		<div class="box-toc">
+			<h2>Further resources</h2>
+
+			<p><a href="https://www.justinmind.com/blog/inspiring-hero-image-websites/" target="_blank" rel="noopener" class="further-title">20 inspiring hero image websites</a>
+			<br>By <a href="https://www.justinmind.com/blog/author/rebeka-costa/" target="_blank" rel="noopener" style="font-weight:normal">Rebeca Costa</a> at the <a href="https://www.justinmind.com/blog/" target="_blank" rel="noopener" style="font-weight:normal">Just in Mind Blog</a>.</p>
+
+			<p><a href="https://www.canva.com/learn/hero-images/" target="_blank" rel="noopener" class="further-title">What is a hero image?</a>
+			<br>By Mary Stribley at <a href="https://www.canva.com/learn/" target="_blank" rel="noopener" style="font-weight:normal">Canva Learn</a>.</p>
+
+			<p><a href="https://blog.tubikstudio.com/hero-images-in-web-design/" target="_blank" rel="noopener" class="further-title">A Look at Hero Images in Web Design</a>
+			<br>By Marina Yalanska at the <a href="https://blog.tubikstudio.com/" target="_blank" rel="noopener" style="font-weight:normal">Tubik Studio Blog</a>.</p>
+
+			<p><a href="https://neilpatel.com/blog/hero-images-that-boost-conversions/" target="_blank" rel="noopener" class="further-title">How to Select Hero Images that Boost Conversions and Move Audiences</a>
+			<br>From the <a href="https://learn.g2.com/" target="_blank" rel="noopener" style="font-weight:normal">Neil Patel Blog</a>.</p>
+
+		</div>
+		<p><br><br>Return to <a href="../index.html">Contents</a>.</p>
+
+		<p>&nbsp;</p>
+	</section>
 
 
 
