--- a/it4women/exercises/hero-blocks-one.html
+++ b/it4women/exercises/hero-blocks-one.html
@@ -78,7 +78,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<li>Add Font Awesome icons to a web.</li>
 	</ul>
 
-	<p>You can view a finished version of the sample web page you will update in this Tutorial by clicking the link below. The finished sample will open in a new tab of your web browser.</p>
+	<p>You can view a finished version of the sample web page you will work with in this Tutorial by clicking the link below. The finished sample will open in a new tab of your web browser.</p>
 
 
 	<div class="four-samples">
@@ -103,7 +103,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<p><a href="#hero-five">Hero block: sample five</a></p>
 		<p><a href="#animate-text">Animating text</a></p>
 		<p><a href="#font-awesome">Adding icons with Font Awesome</a></p>
-		<p><a href="#upload-github">Uploading your files to GitHub</a></p>
+		<p><a href="#github-upload">Uploading your files to GitHub</a></p>
+		<p><a href="#further-resources">Further resources</a></p>
 	</div>
 </section>
 
@@ -112,9 +113,28 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 	<h2>About hero blocks</h2>
 
-	<p>So-called <i>hero blocks</i> (sometimes known as <i>jumbotrons</i>) are large and typically rectangular areas at the very top of a web page.</p>
+	<p><a href="https://www.researchgate.net/publication/220208334_Attention_web_designers_You_have_50_milliseconds_to_make_a_good_first_impression_Behaviour_and_Information_Technology_252_115-126" target="_blank">Research</a> has shown that a typical web user will form an opinion about a web page in just <i>50 milliseconds</i> after the page loads on their screen.</p>
+
+	<ul>
+		<li>If users like what they see, they will continue to read the page &#8211; and maybe purchase a product or service.</li>
+		<li>If they don't like what they see, they will exit the web page and go to another. And your website will have lost a potential customer.</li>
+	</ul>
 	
-	<p>They are the first item seen by users, and are intended to capture their attention and engage their interest in the web page.</p>
+
+	<p>So-called <i>hero blocks</i> (sometimes known as <i>jumbotrons</i>) are large and typically rectangular areas at the very top of a web page. They are the first item seen by users, and are intended to capture their attention and engage their interest in the web page.</p>
+
+	<p>Because the fill most of the top of the user's screen, hero blocks are often referred to as displaying <i>above the fold</i>. This term comes from the era when newspapers were printed on large sheets of paper. And, when placed in shops, they were folded in half so that only the top half of the paper was visible to customers. For this reason, newspapers printed their most attention-grabbing headlines and images <i>above the fold</i>.</p>
+
+	<img src="assets/img/hero-blocks/above-and-below-the-fold.jpg" alt="Working with Internal Hyperlinks">
+
+	<p>On mobile, tablet, laptop and desktop screens, <i>above the fold</i> content is what the users can see without needing to scroll down the web page.</p>
+
+
+	<p>In the next two Tutorials, you will learn how to create hero blocks with <a href="hero-blocks-two.html">background images</a> and <a href="hero-blocks-three.html">background videos</a>. However, not every hero block needs to use images or videos. See the examples below.</p>
+
+	<img src="assets/img/hero-blocks/samples-hero-blocks-basic.png" alt="Working with Internal Hyperlinks">
+
+	<p>In tnis Tutorial, you will work with five examples of basic, text-only hero blocks.</p>
 
 </section>
 
@@ -649,7 +669,7 @@ You have now finished creating the <b>slide-in-top</b> class.</li>
 			<li>Save and your <b>hero-basic.html</b> web page.</li>
 		</ol>
 
-	<p>In your web browser, depending on your choosen icons, the two buttons should look similar to those below.</p>
+	<p>In your web browser, depending on your chosen icons, the two buttons should look similar to those below.</p>
 	<img src="assets/img/hero-blocks/fa-icons-4.png" alt="Hyperlink Buttons and Icons">
 
 
@@ -689,74 +709,77 @@ You have now finished creating the <b>slide-in-top</b> class.</li>
 	<img src="assets/img/hero-blocks/fa-icons-8.png" alt="Hyperlink Buttons and Icons">
 
 
-</section>
-
-<section id="sample-websites" class="wrapper-content bg-white">
-
-<h2>Sample personal websites</h2>
-	<div class="container-flexbox sample-pages">
-		<div class="item-3">
-			<a target="_blank" href="https://inakisoria.com/">https://inakisoria.com/</a>
-		</div>
-		<div class="item-3">
-			<a target="_blank" href="https://gerireid.com">https://gerireid.com</a>
-		</div>
-		<div class="item-3">
-			<a target="_blank" href="https://thierrychopain.com">https://thierrychopain.com</a>
-		</div>
-		<div class="item-3">
-			<a target="_blank" href="https://marisachentakul.co">https://marisachentakul.co</a>
-		</div>
-		<div class="item-3">
-			<a target="_blank" href="https://www.britnor.codes">https://www.britnor.codes</a>
-		</div>
-		<div class="item-3">
-			<a target="_blank" href="https://rebwill.github.io">https://rebwill.github.io</a>
-		</div>
-		<div class="item-3">
-			<a target="_blank" href="https://nikokoneko.com/">https://nikokoneko.com/</a>
-		</div>
-		<div class="item-3">
-			<a target="_blank" href="https://samanthaming.com">https://samanthaming.com</a>
-		</div>
-		<div class="item-3">
-			<a target="_blank" href="https://robbowen.digital">https://robbowen.digital</a>
-		</div>
-		<div class="item-3">
-			<a target="_blank" href="https://css-irl.info">https://css-irl.info</a>
-		</div>
-		<div class="item-3">
-			<a target="_blank" href="http://luciebajgart.com">https://luciebajgart.com</a>
-		</div>
-		<div class="item-3">
-			<a target="_blank" href="https://victorkaiwong.com">https://victorkaiwong.com</a>
-		</div>
-		<div class="item-3">
-			<a target="_blank" href="https://devinford.dev">https://devinford.dev</a>
-		</div>
-		<div class="item-3">
-			<a target="_blank" href="https://jason.af">https://jason.af</a>
-		</div>
-		<div class="item-3">
-			<a target="_blank" href="https://pierrickcalvez.com">https://pierrickcalvez.com</a>
-		</div>
-		<div class="item-3">
-			<a target="_blank" href="https://vanschneider.com">https://vanschneider.com</a>
-		</div>
-		<div class="item-3">
-			<a target="_blank" href="https://areoladaniel.com">https://areoladaniel.com</a>
-		</div>
-		<div class="item-3">
-			<a target="_blank" href="https://karriebriscoe.com/">https://karriebriscoe.com/</a>
-		</div>
-	</div>
+	<p>That&#8217;s it. You have now completed this Tutorial.</p>
 
 
+	<p>You can see an example of the finished web page at the link below.</p>
 
-
-	<p><br><br>Return to <a href="../index.html">Contents</a>.</p>
+	<a href="final-hero/hero-basic/after/hero-basic.html" target="_blank">hero-basic.html</a>
 
 </section>
+
+<section id="github-upload" class="wrapper-content bg-white">
+	<h2>Uploading your Bootstrap folder to GitHub</h2>
+
+	<p>Follow these steps below to upload your <i>entire</i> Bootstrap folder to your website on GitHub.</p>
+
+	<ol>
+
+		<li>Open a new tab in your web browser and go to <a href="https://www.github.com" target="_blank">GitHub.com</a>. If you are not already signed in to your GitHub account, sign in now.
+		<img src="assets/img/intro-bootstrap/github-signin.png" alt="github-signin"></li>
+
+		<li>On your GitHub home page, click the name of the repository (&#8216;repo&#8217;) that holds your web pages. Its name will look as follows, where <b>username</b> is your chosen username on GitHub.
+		<span class="inside-ol">&nbsp;</span>
+		<b>username.github.io</b>
+
+		<img src="assets/img/intro-bootstrap/github-repo-select.png" alt="github-signin"></li>
+
+		<li>On the next GitHub screen displayed, click the Add file button near the right of the screen and choose <b>Upload files</b> from the dropdown list. 
+		<img src="assets/img/intro-bootstrap/github-btn-add-file-dropdown.png" alt="github-upload-portfolio"></li>
+
+		<li>In File/Windows Explorer, select your <b>bootstrap</b> folder, and drag-and-drop it to your repository on GitHub. 
+		
+		<img src="assets/img/intro-bootstrap/github-upload-drag-drop.png" alt="Introduction to Images"></li>
+
+		<li>Scroll down to the bottom of the GitHub screen, and accept or edit the short message (<span style="color:gray">Add files via upload</span>) in the <b>Commit changes</b> box.
+
+		<span class="inside-ol">&nbsp;</span>
+
+		Finally, click the green <b>Commit changes</b> button to upload your entire <b>bootstrap</b> folder and all the files it contains.</li>
+
+	</ol>
+
+	<p>Your uploaded web page is published on GitHub at a web address similar to the following, where <b>username</b> is the username you have chosen for your GitHub account:</p>
+
+	<p><b>https://username.github.io/bootstrap/hero-basic.html</b></p>
+
+	<p>It may take a few minutes for your uploaded files to appear on GitHub.</p>
+</section>
+
+
+
+	<section id="further-resources" class="wrapper-content">
+
+		<div class="box-toc">
+			<h2>Further resources</h2>
+
+			<p><a href="https://www.lonefircreative.com/blog/what-does-above-the-fold-mean" target="_blank" rel="noopener" class="further-title">What Does Above The Fold Mean?</a>
+			<br>By Tyler Pigott at <a href="https://hiddendepth.ie/" target="_blank" rel="noopener" style="font-weight:normal">Lone Fir Creative</a>.</p>
+
+			<p><a href="https://www.computan.com/blog/why-above-the-fold-of-a-webpage-is-important" target="_blank" rel="noopener" class="further-title">Why Above the Fold of a Webpage is Important (For Marketers)</a>
+			<br>By <a href="https://www.computan.com/blog/author/simranjeet-singh" target="_blank" rel="noopener" style="font-weight:normal">Simranjeet Singh</a> at <a href="https://automationagency.com/" target="_blank" rel="noopener" style="font-weight:normal">Computan</a>.</p>
+
+			<p><a href="https://www.abtasty.com/blog/above-the-fold/" target="_blank" rel="noopener" class="further-title">Above the Fold vs. Below the Fold: Does it Still Matter Today?</a>
+			<br>By Anthony Brebion at <a href="https://speckyboy.com/" target="_blank" rel="noopener" style="font-weight:normal">Adtasty Blog</a>.</p>
+
+			<p><a href="https://vwo.com/blog/is-above-the-fold-really-dead/" target="_blank" rel="noopener" class="further-title">Is Above-The-Fold Really Dead?</a>
+			<br>By <a href="https://vwo.com/blog/author/nitin/" target="_blank" rel="noopener" style="font-weight:normal">Nitin Deshdeep</a> at <a href="https://learn.g2.com/" target="_blank" rel="noopener" style="font-weight:normal">VWO</a>.</p>
+
+		</div>
+		<p><br><br>Return to <a href="../index.html">Contents</a>.</p>
+
+		<p>&nbsp;</p>
+	</section>
 
 
 
