--- a/it4women/exercises/intro-bootstrap.html
+++ b/it4women/exercises/intro-bootstrap.html
@@ -64,10 +64,25 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		</div>
 	</div>
 
-
 </section>
 
-<section id="box-about" class="wrapper-content">
+<section class="wrapper-content">
+	<div class="box-toc">
+		<h2>Contents</h2>
+		<p><a href="#about-bootstrap">About Bootstrap</a></p>
+		<p><a href="#sub-folder">Creating a sub-folder for your Bootstrap files</a></p>
+		<p><a href="#basic-page">Creating a basic Bootstrap web page</a></p>
+		<p class="toc-indent"><a href="#add-title">Adding a title to the &lt;head&gt; of your web page</a></p>
+		<p class="toc-indent"><a href="#add-desc">Adding a description to the &lt;head&gt; of your web page</a></p>
+		<p class="toc-indent"><a href="#add-css">Adding the Bootstrap CSS link to the &lt;head&gt; of your web page</a></p>
+		<p class="toc-indent"><a href="#add-js">Adding the three Bootstrap JavaScript links the end of your web page</a></p>
+		<p><a href="#github-upload">Uploading your Bootstrap folder to GitHub</a></p>
+		<p><a href="#further-resources">Further resources</a></p>
+	</div>
+</section>
+
+
+<section id="about-bootstrap" class="wrapper-content">
 
 	<h2>About Bootstrap</h2>
 
@@ -88,7 +103,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 
-<section id="box-about" class="wrapper-content">
+<section id="sub-folder" class="wrapper-content">
 
 <h2>Creating a sub-folder for your Bootstrap files</h2>
 
@@ -112,7 +127,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </section>
 
 
-<section id="box-about" class="wrapper-content">
+<section id="basic-page" class="wrapper-content">
 <h2>Creating a basic Bootstrap web page</h2>
 	<p>Let&#8217;s create a new web page &#8211; that is, an HTML file. Here are the steps:</p>
 
@@ -164,7 +179,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 	<p>That&#8217;s it. You have successfully created a basic, empty web page.</p>
 
-	<h3 id="first-web-page-title">Adding a title to the &lt;head&gt; of your web page</h3>
+	<h3 id="add-title">Adding a title to the &lt;head&gt; of your web page</h3>
 	<p>Now you will update the title to your web page.</p>
 	
 	<ol>
@@ -186,7 +201,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	
 	</ol>
 
-	<h3 id="first-web-page-description">Adding a description to the &lt;head&gt; of your web page</h3>
+	<h3 id="add-desc">Adding a description to the &lt;head&gt; of your web page</h3>
 	<p>Now you will add a summary description of the contents of your web page.</p>
 
 	<ol>
@@ -209,7 +224,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<p>All done. You have now provided a title and description to your basic web page.</p>
 
 
-	<h3 id="first-web-page-css">Adding the Bootstrap CSS link</h3>
+	<h3 id="add-css">Adding the Bootstrap CSS link to the &lt;head&gt; of your web page</h3>
 	<p>Now you will add a link to the Bootstrap stylesheet CSS file (version 4).</p>
 
 	<ol>
@@ -240,7 +255,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 
-	<h3 id="first-web-page-js">Adding the Bootstrap JavaScript links</h3>
+	<h3 id="add-js">Adding the three Bootstrap JavaScript links to the end of your web page</h3>
 	<p>Finally, you will add the links to the JavaScript files required by Bootstrap to work.</p>
 
 	<ol>
@@ -284,7 +299,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<p>Below you can see where your basic <b>bootstrap.html</b> file is stored within the folder structure on your computer.</p>
 	<img src="assets/img/intro-bootstrap/file-explorer-full-2.png" alt="Introduction to HTML">
 
-
 	<p>Note that you do not need any other files on your computer to create a basic Bootstrap-based web page.</p>
 
 	<p>The Bootstrap CSS file and three Javascript files are all hosted online on another web server.</p>
@@ -292,7 +306,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </section>
 
 
-<section id="upload-github" class="wrapper-content bg-white">
+<section id="github-upload" class="wrapper-content bg-white">
 	<h2>Uploading your Bootstrap folder to GitHub</h2>
 
 	<p>Follow these steps below to upload your <i>entire</i> Bootstrap folder to your website on GitHub.</p>
